<resources>
    <string name="app_name">lab1</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button </string>
    <string name="TextView">Here are my widgets:</string>
    <string name="Button">Button</string>
    <string name="checkBox2">Check this out</string>
    <string name="switch2">Switch on/off</string>
    <string name="editText">Type your answer here</string>
    <string name="title_activity_chat_room">ChatRoomActivity</string>
    <string name="emailAddress">Enter your email address:</string>
    <string name="emailHint">Type email here</string>
    <string name="password">Type your password:</string>
    <string name="Login">LOGIN</string>
    <string name="Yourprofile">Your profile</string>
    <string name="name">Your name:</string>
    <string name="inputName">Enter your name</string>
    <string name="inputEmail">Your email:</string>
    <string name="YourPicture">Your Picture</string>
    <string name="takePicture">Click the button above to take a picture</string>
    <string name="gotochat">Go to chat</string>
    <string name="send">Send</string>
    <string name="receive">receive</string>
    <string name="typeChat">Type here</string>
</resources>
